bench/results/v0.20.0/summary.md
# Boring CMS benchmark v0.20.0

Run: 2026-09-22T07:44:30.586Z on Linux 7.1.10-200.fc44.x86_64, AMD Ryzen 5 5600X 6-Core Processor (12 cores host).
Constraints and methodology: see bench/README.md. Read it before comparing numbers; the CPU pinning, memory caps, rate limit override, and client placement all shape these results.

## Throughput (ops/s) by phase

| Phase | bun-1cpu | bun-2cpu | bun-4cpu | deno-1cpu | deno-2cpu | deno-4cpu | node-1cpu | node-2cpu | node-4cpu |
| --- | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: |
| schema_apply | 795.6 | 842.2 | 964 | 690.3 | 681.1 | 787.3 | 606.7 | 807.1 | 778 |
| schema_read | 2240.1 | 2616.9 | 2555 | 2210.1 | 2384.7 | 2280.4 | 1876.9 | 2238.3 | 2215.8 |
| create_short | 1480.7 | 1578.2 | 1591 | 1379.5 | 1357.1 | 1447.8 | 1280.2 | 1349 | 1404.2 |
| create_long | 970.3 | 971.5 | 963 | 935.6 | 908.8 | 939 | 811.5 | 902.9 | 891.8 |
| create_short_restcall | 1913.9 | 2047.3 | 1995.6 | 1871.2 | 1843.4 | 1960.7 | 1824 | 1923.4 | 1865.2 |
| batch_create_short_x200 | 122.2 | 151.9 | 145 | 108.5 | 96.4 | 104.3 | 119.8 | 116.4 | 122.5 |
| read_list_short | 2963.1 | 3340.4 | 3394.9 | 3332 | 3022.9 | 3124.5 | 3171.5 | 3519.5 | 3318.1 |
| read_list_long | 2821.3 | 2818.6 | 2897.6 | 2975.3 | 2615.1 | 2634 | 2170 | 2399.1 | 2415.6 |
| read_single_short | 4224.2 | 4493 | 4998.9 | 4276.6 | 4062.4 | 4049.8 | 4081.5 | 4209.1 | 4541.6 |
| read_single_long | 2333.4 | 2750.2 | 2900.1 | 2647.2 | 2500.5 | 2571.9 | 2829.8 | 2741.4 | 2524.1 |
| read_304_etag | 3821 | 4483.9 | 4804.4 | 3900.2 | 3827.4 | 4343.8 | 4845.9 | 4785.2 | 4675.2 |
| update_then_read | 1210.6 | 1234.6 | 1232.9 | 1068 | 1060.6 | 1061.7 | 1132.1 | 1122.6 | 1103.5 |
| rewrite_dry_1pair | 213.3 | 148.5 | 220.5 | 208.8 | 208.9 | 205.3 | 199.1 | 134.9 | 201.8 |
| rewrite_dry_200pairs | 87.1 | 129.8 | 144.2 | 139 | 152.7 | 137.3 | 150.5 | 125.1 | 137.5 |
| rewrite_live_200pairs | 74.5 | 68.9 | 64.3 | 101.4 | 104.1 | 101 | 103.3 | 87.8 | 108.1 |
| media_upload_64kb | 1111 | 1152.2 | 1209.7 | 623.1 | 827.2 | 858.1 | 776.5 | 893.8 | 1001.2 |
| media_serve_64kb | 1704.8 | 1717.5 | 1857.8 | 1883 | 1595 | 1879.5 | 1449.5 | 1703.5 | 1777.2 |
| media_reupload | 1216 | 1290 | 1458 | 1014.9 | 1025.6 | 1026.6 | 765.5 | 859 | 1258.4 |
| media_delete | 2350.1 | 2517 | 2849.2 | 2375.1 | 2208.5 | 2280.3 | 2240.9 | 2398.3 | 2501.7 |
| link_access | 4549.6 | 4778.6 | 4955.6 | 3934.9 | 3697.2 | 4143.4 | 3836.1 | 3996.3 | 3941.7 |
| read_concurrent_20 | 7552.7 | 6442.3 | 7356.4 | 7225.2 | 7114.9 | 7067.5 | 6290.6 | 6675.6 | 6880.7 |
| write_concurrent_10 | 3497.4 | 3526.2 | 3863 | 3433.7 | 3477.1 | 3529.9 | 3209.7 | 3352.6 | 3374.9 |
| schedule_future | 1032.4 | 1093.7 | 1087.7 | 979.3 | 1029.3 | 978.1 | 983 | 1008.7 | 979.4 |
| read_list_short_with_scheduled | 2743.4 | 2985 | 2924.1 | 2554.7 | 2490.2 | 2527.4 | 2546.3 | 2552 | 2610.8 |
| read_single_scheduled_404 | 5105.5 | 4544.7 | 5423.5 | 4452.7 | 4599.6 | 4733.2 | 5259.9 | 4534.7 | 5206.3 |
| list_scheduled | 1494.8 | 1586.6 | 1592.3 | 1436.3 | 1438.3 | 1338.7 | 1461.1 | 1302.5 | 1415 |
| get_entry_draft_scheduled | 2551.1 | 2707.9 | 2636.2 | 2491.9 | 2607.7 | 2231.3 | 2408.1 | 2422.1 | 2292.7 |
| reschedule_entry | 2178.4 | 2331.6 | 2253.3 | 2165.4 | 2227.5 | 2142.3 | 2136.8 | 2088 | 2101.2 |
| scheduled_goes_live | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 | 0.3 |
| misc_seed | 1451.7 | 1537.8 | 1405.7 | 1342.6 | 1290.3 | 1352.1 | 1433 | 1433.5 | 1379.9 |
| misc_read_only | 6359.5 | 6058.4 | 6419.3 | 5912.7 | 6030.2 | 6077.2 | 5474.2 | 6138.6 | 5736.6 |
| misc_read_write | 5697.1 | 6452.2 | 5705.1 | 5111.3 | 5208.2 | 5543.4 | 4886.4 | 5246.4 | 5531.5 |
| misc_write_votes | 10284.8 | 8607.5 | 8870.9 | 9534.6 | 9752.7 | 9386.8 | 9038.6 | 8731.9 | 9149.7 |
| misc_write_edits | 2373.9 | 2619.6 | 2177.3 | 2238.1 | 2397.4 | 2490.3 | 1818.2 | 2483.2 | 2500.6 |
| misc_hot_votes | 10645.6 | 10672 | 10616.3 | 9637.9 | 10354.2 | 9989.8 | 8584.6 | 9829.5 | 9572.9 |
| misc_hot_mixed | 11650.8 | 12674.4 | 11305.8 | 8779.8 | 10529.2 | 10537 | 10953 | 11224.9 | 10569.9 |
| misc_hot_repeat_voters | 10864.5 | 11544.8 | 11949.8 | 8744.1 | 10742.9 | 10953.8 | 10877.3 | 9871.6 | 10601.8 |
| misc_private_bump | 10538.6 | 12770.8 | 12741 | 8814.5 | 9570.6 | 10597.1 | 7848.6 | 8236.5 | 8681.9 |
| delete_entries | 2528.7 | 2737.6 | 2361.6 | 2629.1 | 2601.8 | 2907.6 | 2725.7 | 2517.2 | 2862.6 |

## Latency p50 / p95 (ms) by phase

| Phase | bun-1cpu | bun-2cpu | bun-4cpu | deno-1cpu | deno-2cpu | deno-4cpu | node-1cpu | node-2cpu | node-4cpu |
| --- | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: |
| schema_apply | 1.03 / 2.58 | 0.9 / 2.37 | 0.85 / 2.24 | 1.39 / 2.77 | 1.4 / 2.46 | 1.06 / 2.42 | 1.45 / 2.74 | 1.05 / 2.23 | 1.06 / 2.29 |
| schema_read | 0.37 / 0.86 | 0.32 / 0.76 | 0.36 / 0.79 | 0.39 / 0.9 | 0.37 / 0.83 | 0.4 / 0.88 | 0.44 / 1 | 0.41 / 0.79 | 0.41 / 0.91 |
| create_short | 0.59 / 1.32 | 0.58 / 0.86 | 0.58 / 0.86 | 0.68 / 1.01 | 0.72 / 0.95 | 0.66 / 0.89 | 0.68 / 1.22 | 0.69 / 0.95 | 0.68 / 0.94 |
| create_long | 0.97 / 1.56 | 0.96 / 1.47 | 0.97 / 1.6 | 0.99 / 1.79 | 1.02 / 1.48 | 0.99 / 1.41 | 1.13 / 2.01 | 1.04 / 1.68 | 1.04 / 1.67 |
| create_short_restcall | 0.46 / 0.78 | 0.46 / 0.56 | 0.46 / 0.61 | 0.48 / 0.72 | 0.5 / 0.68 | 0.49 / 0.61 | 0.48 / 0.89 | 0.49 / 0.62 | 0.49 / 0.69 |
| batch_create_short_x200 | 7.44 / 9.99 | 6.65 / 7.13 | 6.81 / 7.46 | 9.2 / 9.57 | 10.22 / 11 | 9.63 / 10.02 | 8.62 / 8.86 | 8.57 / 9.06 | 8.24 / 8.88 |
| read_list_short | 0.26 / 0.64 | 0.27 / 0.4 | 0.26 / 0.38 | 0.26 / 0.38 | 0.32 / 0.35 | 0.29 / 0.42 | 0.28 / 0.47 | 0.27 / 0.35 | 0.27 / 0.39 |
| read_list_long | 0.25 / 0.59 | 0.27 / 0.4 | 0.25 / 0.44 | 0.28 / 0.5 | 0.31 / 0.48 | 0.28 / 0.56 | 0.35 / 0.6 | 0.31 / 0.62 | 0.32 / 0.52 |
| read_single_short | 0.21 / 0.32 | 0.21 / 0.28 | 0.19 / 0.23 | 0.22 / 0.29 | 0.24 / 0.27 | 0.24 / 0.29 | 0.21 / 0.32 | 0.22 / 0.29 | 0.21 / 0.29 |
| read_single_long | 0.33 / 0.95 | 0.35 / 0.41 | 0.34 / 0.39 | 0.35 / 0.48 | 0.39 / 0.47 | 0.38 / 0.45 | 0.34 / 0.4 | 0.34 / 0.43 | 0.38 / 0.48 |
| read_304_etag | 0.19 / 0.47 | 0.2 / 0.24 | 0.19 / 0.24 | 0.23 / 0.32 | 0.22 / 0.27 | 0.21 / 0.28 | 0.19 / 0.26 | 0.21 / 0.25 | 0.19 / 0.25 |
| update_then_read | 0.72 / 1.31 | 0.75 / 0.87 | 0.77 / 0.94 | 0.85 / 1.2 | 0.87 / 1.15 | 0.91 / 1.07 | 0.81 / 1.09 | 0.84 / 1 | 0.85 / 1.07 |
| rewrite_dry_1pair | 4.69 / 4.69 | 6.73 / 6.73 | 4.53 / 4.53 | 4.79 / 4.79 | 4.79 / 4.79 | 4.87 / 4.87 | 5.02 / 5.02 | 7.41 / 7.41 | 4.95 / 4.95 |
| rewrite_dry_200pairs | 11.48 / 11.48 | 7.71 / 7.71 | 6.93 / 6.93 | 7.19 / 7.19 | 6.55 / 6.55 | 7.28 / 7.28 | 6.64 / 6.64 | 8 / 8 | 7.27 / 7.27 |
| rewrite_live_200pairs | 13.43 / 13.43 | 14.51 / 14.51 | 15.55 / 15.55 | 9.86 / 9.86 | 9.61 / 9.61 | 9.9 / 9.9 | 9.68 / 9.68 | 11.39 / 11.39 | 9.25 / 9.25 |
| media_upload_64kb | 0.78 / 1.33 | 0.78 / 1.31 | 0.76 / 0.91 | 0.96 / 4.01 | 0.98 / 1.29 | 0.97 / 1.11 | 0.87 / 2.86 | 0.89 / 1.81 | 0.84 / 1.12 |
| media_serve_64kb | 0.5 / 1.1 | 0.48 / 1.05 | 0.49 / 0.76 | 0.47 / 0.78 | 0.56 / 0.82 | 0.49 / 0.76 | 0.49 / 0.86 | 0.46 / 0.79 | 0.49 / 0.72 |
| media_reupload | 0.69 / 1.4 | 0.71 / 1.19 | 0.64 / 0.8 | 0.85 / 1.32 | 0.91 / 1.18 | 0.98 / 1.08 | 0.72 / 1.22 | 0.81 / 2.46 | 0.75 / 1 |
| media_delete | 0.32 / 0.99 | 0.36 / 0.62 | 0.33 / 0.39 | 0.37 / 0.62 | 0.4 / 0.5 | 0.39 / 0.51 | 0.37 / 0.67 | 0.35 / 0.52 | 0.36 / 0.43 |
| link_access | 0.2 / 0.27 | 0.21 / 0.23 | 0.2 / 0.22 | 0.24 / 0.33 | 0.26 / 0.33 | 0.23 / 0.28 | 0.23 / 0.32 | 0.24 / 0.32 | 0.24 / 0.27 |
| read_concurrent_20 | 2.16 / 4.75 | 2.78 / 5.35 | 2.41 / 4.72 | 2.52 / 3.92 | 2.37 / 5.05 | 2.55 / 3.91 | 2.39 / 5.76 | 2.23 / 4.84 | 2.34 / 5.73 |
| write_concurrent_10 | 2.57 / 6.6 | 2.52 / 5.87 | 2.08 / 5.09 | 2.19 / 4.84 | 2.32 / 5.32 | 2.25 / 5.3 | 2.32 / 6.03 | 2.34 / 5.23 | 2.13 / 6.06 |
| schedule_future | 0.76 / 1.46 | 0.79 / 1 | 0.79 / 1.23 | 0.88 / 1.37 | 0.87 / 1.03 | 0.9 / 1.1 | 0.85 / 1.47 | 0.85 / 1.17 | 0.91 / 1.22 |
| read_list_short_with_scheduled | 0.33 / 0.44 | 0.32 / 0.42 | 0.34 / 0.37 | 0.36 / 0.5 | 0.37 / 0.47 | 0.38 / 0.47 | 0.36 / 0.49 | 0.37 / 0.49 | 0.37 / 0.46 |
| read_single_scheduled_404 | 0.18 / 0.3 | 0.19 / 0.29 | 0.18 / 0.21 | 0.2 / 0.23 | 0.21 / 0.25 | 0.21 / 0.26 | 0.18 / 0.23 | 0.21 / 0.29 | 0.19 / 0.21 |
| list_scheduled | 0.63 / 0.8 | 0.61 / 0.73 | 0.6 / 0.76 | 0.68 / 0.83 | 0.69 / 0.75 | 0.74 / 0.87 | 0.68 / 0.75 | 0.76 / 0.86 | 0.69 / 0.81 |
| get_entry_draft_scheduled | 0.35 / 0.42 | 0.35 / 0.43 | 0.37 / 0.46 | 0.38 / 0.52 | 0.38 / 0.43 | 0.43 / 0.55 | 0.4 / 0.51 | 0.4 / 0.47 | 0.43 / 0.49 |
| reschedule_entry | 0.41 / 0.55 | 0.41 / 0.5 | 0.43 / 0.53 | 0.45 / 0.56 | 0.43 / 0.53 | 0.46 / 0.55 | 0.46 / 0.52 | 0.47 / 0.55 | 0.47 / 0.5 |
| scheduled_goes_live | 3107.38 / 3107.38 | 3105.8 / 3105.8 | 3105.14 / 3105.14 | 3105.44 / 3105.44 | 3105.52 / 3105.52 | 3105.87 / 3105.87 | 3105.36 / 3105.36 | 3105.23 / 3105.23 | 3105.71 / 3105.71 |
| misc_seed | 0.6 / 1.12 | 0.6 / 0.77 | 0.63 / 1.03 | 0.68 / 0.98 | 0.68 / 1.1 | 0.67 / 0.87 | 0.66 / 0.88 | 0.67 / 0.84 | 0.66 / 0.82 |
| misc_read_only | 2.26 / 4.1 | 2.37 / 4.17 | 2.29 / 3.78 | 2.33 / 4.23 | 2.34 / 4.52 | 2.39 / 4.22 | 2.76 / 5.34 | 2.41 / 4.24 | 2.45 / 4.92 |
| misc_read_write | 2.49 / 5.01 | 2.24 / 4.45 | 2.39 / 4.71 | 2.9 / 4.79 | 2.85 / 4.92 | 2.71 / 4.19 | 2.7 / 5.79 | 2.65 / 5.51 | 2.44 / 4.97 |
| misc_write_votes | 2.69 / 5.29 | 3.13 / 5.07 | 3.06 / 5.48 | 2.91 / 5.12 | 2.9 / 4.6 | 3 / 4.86 | 2.96 / 6.55 | 3.07 / 5.89 | 2.94 / 5.84 |
| misc_write_edits | 1.21 / 2.75 | 1.03 / 2.35 | 1.36 / 3.58 | 1.45 / 3.08 | 1.52 / 2.48 | 1.46 / 2.15 | 1.42 / 4.72 | 1.25 / 2.62 | 1.33 / 2.6 |
| misc_hot_votes | 5.25 / 12.9 | 5.34 / 11.99 | 5.41 / 9.24 | 5.58 / 13.21 | 5.5 / 11.74 | 5.61 / 12.37 | 5.66 / 15.39 | 5.55 / 12.61 | 5.78 / 13.13 |
| misc_hot_mixed | 4.82 / 11.32 | 4.75 / 7.11 | 4.94 / 12.99 | 6.26 / 14.03 | 5.28 / 8.94 | 5.22 / 8.49 | 5.16 / 10.83 | 5.14 / 10.26 | 5.14 / 10.75 |
| misc_hot_repeat_voters | 4.98 / 11.15 | 4.96 / 13.11 | 5 / 5.8 | 5.81 / 13.71 | 5.49 / 8.27 | 5.05 / 11.88 | 5.09 / 12.71 | 5.48 / 13.47 | 5.32 / 11.1 |
| misc_private_bump | 1.25 / 3.81 | 1.2 / 1.99 | 1.17 / 2.08 | 1.57 / 2.74 | 1.5 / 1.77 | 1.51 / 1.63 | 1.57 / 3.57 | 1.7 / 3.52 | 1.61 / 3.4 |
| delete_entries | 0.33 / 0.45 | 0.32 / 0.41 | 0.35 / 0.46 | 0.37 / 0.42 | 0.38 / 0.46 | 0.34 / 0.36 | 0.34 / 0.49 | 0.38 / 0.49 | 0.34 / 0.43 |

## Run metadata

| Run | Runtime | vCPUs | Peak RSS (MB) | Wall (s) |
| --- | --- | ---: | ---: | ---: |
| bun-1cpu | bun 1.4.2 | 1 | 96 | 7 |
| bun-2cpu | bun 1.4.2 | 2 | 106 | 7 |
| bun-4cpu | bun 1.4.2 | 4 | 100 | 7 |
| deno-1cpu | deno 2.9.6 | 1 | 153 | 7 |
| deno-2cpu | deno 2.9.6 | 2 | 146 | 7 |
| deno-4cpu | deno 2.9.6 | 4 | 150 | 7 |
| node-1cpu | v24.13.1 | 1 | 127 | 8 |
| node-2cpu | v24.13.1 | 2 | 137 | 7 |
| node-4cpu | v24.13.1 | 4 | 126 | 7 |
